<resources>
    <string name="app_name">Clean Time</string>
    <string name="all_2_4_wheelers_cleaning_and_detailing_service"><![CDATA[All 2&4 wheelers cleaning and detailing service]]></string>
    <string name="next">Next</string>
    <string name="welcome">WELCOME</string>
    <string name="get_otp">Get OTP</string>
    <string name="or">OR</string>
    <string name="_1234567890">1234567890</string>
    <string name="you_accept_all_privacy_policy">You Accept All Privacy Policy</string>
    <string name="verify_your_mobile_number">Verify Your Mobile Number</string>
    <string name="enter_the_pin_you_have_received_via_sms_on_xxxxxx1254">Enter the pin you have received via SMS on xxxxxx1254</string>
    <string name="please_enter_the_correct_otp_or_click_on_resend_code">Please enter the correct OTP or click on Resend Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="my_profile">My Profile</string>
    <string name="my_packages">My Packages</string>
    <string name="my_address">My Address</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="my_payment">My Payment</string>
    <string name="notification">Notification</string>
    <string name="my_requests">My Requests</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="expires_04_25">Expires 04/25</string>
    <string name="car_number">**** **** **** 4578</string>
    <string name="package_id">Package id:</string>
    <string name="full_interior_clean_up">Full Interior Clean-Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services">Services</string>
    <string name="schedule_pickup">Schedule Pickup</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyDNGNXz6WK_QbPz4w2-AUrVzYBI_ASemj0</string>
    <string name="sedan">Sedan</string>
    <string name="hatchback">Hatchback</string>
    <string name="suv">Suv</string>
    <string name="luxury">Luxury</string>
</resources>