<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="Choose Your Package"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSedan"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/sedan"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvHatchback"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/hatchback"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSUV"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/suv"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLuxury"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/luxury"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvTabSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="#707070"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/lvSedan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <fragment
                android:name="com.example.cleantime.home.fragments.SedanFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvHatchback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <fragment
                android:name="com.example.cleantime.home.fragments.HatchbackFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvSUV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <fragment
                android:name="com.example.cleantime.home.fragments.SUVFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvLuxury"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <fragment
                android:name="com.example.cleantime.home.fragments.LuxaryFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>