<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvCodeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.OTPActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/verify_your_mobile_number"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvCodeNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/code_notice"
                android:textColor="@color/blue"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etOTP1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_textbox_trans"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#707070"
                        android:textColorHint="#707070"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#707070" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etOTP2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_textbox_trans"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#707070"
                        android:textColorHint="#707070"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#707070" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etOTP3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_textbox_trans"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#707070"
                        android:textColorHint="#707070"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#707070" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etOTP4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_textbox_trans"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#707070"
                        android:textColorHint="#707070"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#707070" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etOTP5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_textbox_trans"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#707070"
                        android:textColorHint="#707070"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#707070" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etOTP6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_textbox_trans"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#707070"
                        android:textColorHint="#707070"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#707070" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="Did not receive the OTP yet?"
                android:textColor="@color/blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvResendCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/resend_code"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvVerify"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>